2009-08-12  Daniel Elstner  <danielk@openismus.com>

	Bring back demos/ and make it non-recursive

	* configure.ac (AC_CONFIG_FILES): Add output file demos/Makefile.
	* Makefile.am (SUBDIRS): Recurse into demos/ subdirectory again.
	* demos/Makefile.am: Overhaul, modernize and make non-recursive.
	Build the demo program targets on make check instead of make all.
	Install all gtkmm-demo source files, as there is little point in
	not shipping the full compilable set.  Stop installing gtkmm-demo
	for now.  Do we really need this installed?
	* demos/gtk-demo/Makefile.am: Delete now unused file.

2009-08-12  Daniel Elstner  <danielk@openismus.com>

	Fix GLIBMM vs GTKMM typo

	* gtk/gtkmm/Makefile.am (AM_CXXFLAGS): It's $(GTKMM_WXXFLAGS).

2009-08-12  Daniel Elstner  <danielk@openismus.com>

	Un-invert DISABLE_DEPRECATED_API conditional

	* configure.ac (DISABLE_DEPRECATED_API): Invert the accidentally
	reversed test condition for AM_CONDITIONAL().

2009-08-12  Daniel Elstner  <danielk@openismus.com>

	Remove header dependency of gdkmm on gtkmm

	* gdk/src/dragcontext.hg: Remove #include <gtkmm/stockid.h>, which
	appears to have been left over from an earlier change to avoid the
	dependency.  The problem got caught due to the shortened include
	paths of the new build setup.  Also get rid of a pointless forward
	declaration of Gtk::Widget.

2009-08-12  Daniel Elstner  <danielk@openismus.com>

	Correct tag reference to pangomm

	* configure.ac (MM_ARG_WITH_TAGFILE_DOC): The module name of the
	current pangomm API is pangomm-1.4, not pangomm-2.4.  Ooops.

2009-08-12  Daniel Elstner  <danielk@openismus.com>

	Convert documentation to new build system

	* configure.ac (MM_ARG_ENABLE_DOCUMENTATION): Call macro.
	(MM_ARG_WITH_TAGFILE_DOC): Call once for each tagfile dependency.
	(AC_CONFIG_FILES): Remove output files docs/images/Makefile and
	docs/reference/**/Makefile from the list.
	* Makefile.am (SUBDIRS): Include docs/ conditionally.