@@ -9,9 +9,6 @@ Makefile.in
 .dirstamp
 stamp-h?
 
-# generated private headers
-/*/*mm/private/*_p.h
-
 # /
 /aclocal.m4
 /INSTALL
@@ -22,6 +19,7 @@ stamp-h?
 /config.status
 /configure
 /configure.lineno
+/gtkmm-*.tar.*
 /libtool
 
 # MSVC
