@@ -1,3 +1,15 @@
+2009-08-12  Daniel Elstner  <daniel.kitta@gmail.com>
+
+	Remove duplicate image files for pixbuf-demo
+
+	* demos/pixbuf-demo.cc: Clean up a few minor things.
+	(background_name), (image_names): Prefix "gtk-demo/" to the file
+	names so that it can pick up the files from the subdirectory.
+	* demos/Makefile.am (dist_democode_DATA): Split into two variables
+	$(democode_DATA) and $(dist_democode_DATA) to avoid copying source
+	code files twice into the distribution.
+	* demos/background.jpg, demos/*.png: Delete duplicate image files.
+
 2009-08-12  Daniel Elstner  <danielk@openismus.com>
 
 	Bring back demos/ and make it non-recursive
